# caxur-fs

./: AGENTS.md  README.md
.agents/: hooks.json  skills.json
admin/: .env.example  eslint.config.js  package.json  vite.config.ts
api/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  check_out.txt  docker-compose.yml  openapi.json  scratch  scratch.rs
api/.sqlx/: query-0eeda70fee2ad2fa329564cacab123bc7710dd7f0ce97c40051d5a41f26639ab.json  query-c8b56348d4329c274fa2d561206bbdf916b65a9b0ea96f74f2eac52f95ed6ea5.json
api/migrations/: 20251128142735_create_users_table.sql  20251129143535_create_refresh_tokens_table.sql  20251206151625_create_user_administrators_table.sql  20251206221300_create_roles_table.sql  20251206221301_create_role_permissions_table.sql  20260131114000_create_administrator_roles_table.sql  20260131120000_seed_initial_administrator.sql  20260507113000_add_user_profile_fields.sql  20260528125400_add_face_photo_to_users.sql
api/src/: lib.rs  main.rs
api/src/application/administrators/: create.rs  delete.rs  email_change.rs  get.rs  list.rs  mod.rs  password_reset.rs  resend_verification.rs  restore.rs  revoke.rs  roles.rs  update.rs  update_my_password.rs  update_my_profile.rs  verify.rs
api/src/application/auth/: admin_login.rs  login.rs  logout.rs  mod.rs  refresh.rs  token_utils.rs
api/src/application/auth/registration/: initiate.rs  mod.rs  onboarding.rs  verify.rs
api/src/application/permissions/: list.rs
api/src/application/roles/: attach_permission.rs  create.rs  delete.rs  detach_permission.rs  get.rs  get_permissions.rs  list.rs  mocks.rs  mod.rs  update.rs
api/src/application/users/: create.rs  delete.rs  email_change.rs  get.rs  list.rs  mocks.rs  mod.rs  password_reset.rs  update.rs
api/src/domain/: access_scope.rs  administrators.rs  auth.rs  cache.rs  mod.rs  password.rs  permissions.rs  roles.rs  storage.rs  users.rs
api/src/infrastructure/: auth.rs  cache.rs  db.rs  email.rs  mod.rs  password.rs  state.rs
api/src/infrastructure/db/models/: administrators.rs  auth.rs  mod.rs  roles.rs  users.rs
api/src/infrastructure/repositories/: administrators.rs  mod.rs  refresh_tokens.rs  roles.rs  users.rs
api/src/infrastructure/storage/: s3.rs
api/src/presentation/: dtos.rs  extractors.rs  mod.rs  openapi.rs  router.rs
api/src/presentation/admin/handlers/: administrators.rs  auth.rs  mod.rs  my.rs  permissions.rs  roles.rs  users.rs
api/src/presentation/admin/routes/: administrators.rs  auth.rs  mod.rs  my.rs  permissions.rs  roles.rs  users.rs
api/src/presentation/client/handlers/: auth.rs  health.rs  mod.rs  profile.rs  upload.rs
api/src/presentation/client/routes/: auth.rs  mod.rs  profile.rs
api/src/presentation/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs
api/src/shared/: error.rs  mod.rs  pagination.rs  query.rs  response.rs  validation.rs
client/: .env.example  eslint.config.mjs  package.json
scripts/: generate_keys.sh  increment-versions.ts  mcp-api-docs.ts  run-dev-orchestrator.ts  run-dev.sh  (+2 more)
(+90 files in other folders)
