[package]
name = "caxur"
version = "0.1.0"
edition = "2024"
default-run = "caxur"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["multipart"] }
aws-config = { version = "1.5.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.61.0"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "time",
    "macros",
    "tls-rustls",
] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = [
    "cors",
    "trace",
    "compression-gzip",
    "compression-br",
] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
utoipa = { version = "5.3.0", features = ["axum_extras", "uuid", "time"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
argon2 = "0.5"
jsonwebtoken = "9"
p256 = "0.13"
sha2 = "0.10"
futures = "0.3"
tower_governor = "0.8.0"
governor = "0.10.4"
serde_qs = "1.0.0"
lettre = { version = "0.11.21", features = ["tokio1-native-tls", "builder"] }
moka = { version = "0.12.15", features = ["future", "sync"] }
rand = "0.10.1"

[dev-dependencies]
http-body-util = "0.1.3"
